update tulisan bawah
bawah

--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
             <div class="col-lg-8 text-center">
                 <h2 class="mt-0">KEPRI SYAHFEST 2020</h2>
                 <hr class="divider my-4" />
-                <p class="text-muted mb-5">Penguatan Ekonomi Syariah Dalam Mendorong Pertumbuhan Ekonomi Kepulauan Riau</p>
+                <p class="text-muted mb-5">"Contohlah lebah, jika makan ia hanya memilih yang halal dan tayib, demikian pula jika ia memberi makan keluarganya. Dan bila ia
+                   hinggap diatas sesuatu, tak pernah ia mematahkan atau merusaknya." - Ibn Al Qayyim -
+                </p>
             </div>
         </div>
     </div>
@@ -214,7 +216,8 @@
 
 <!-- Footer-->
 <footer class="bg-light py-5">
-    <div class="container"><div class="small text-center text-muted">Copyright © 2020 - BANK INDONESIA</div></div>
+    <div class="container"><div class="small text-center text-muted">Informasi : +62813 6400 7996 (WA Only) | Email : rtf.kepri2020@gmail.com 
+      | Copyright © 2020 - BANK INDONESIA</div></div>
 </footer>
 
 
