add button bazar

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <nav class="navbar navbar-light fixed-top" style="background-color: #67807c; height: 15%;">
   <a class="navbar-brand" href="#">
-    <img src="assets/img/bi logo.png" style="width: 20%;" class="d-inline-block" alt="">
+    <img src="assets/img/bi logo.png" style="width: auto; height: 40px;" class="d-inline-block" alt="">
   </a>
 </nav>
 <body>
@@ -149,7 +149,21 @@
 
 
   <main id="main">
-   
+    <div class="card text-center">
+      <div class="card-header">
+        Featured
+      </div>
+      
+      <div class="card-body">
+        <img src="assets/img/360-degree.png" width="100" height="100" alt="">
+        <h5 class="card-title">Virtual Bazar</h5>
+        <p class="card-text">jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</p>
+        <a href="#" class="btn btn-dark btn-lg btn-square">Buka Virtual Bazar</a>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
+    </div>
     <!-- ======= Works Section ======= -->
     <section class="section site-portfolio">
 
@@ -226,15 +240,18 @@
   </main><!-- End #main -->
 
    <!-- Contact-->
-   <section class="page-section" id="contact">
+   <section class="page-section pt-4" style="color: #fff; background-color: #67807c;" id="contact">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2 class="mt-0">KEPRI SYAHFEST 2020</h2>
-                <hr class="divider my-4" />
-                <p class="text-muted mb-5">"Contohlah lebah, jika makan ia hanya memilih yang halal dan tayib, demikian pula jika ia memberi makan keluarganya. Dan bila ia
-                   hinggap diatas sesuatu, tak pernah ia mematahkan atau merusaknya." - Ibn Al Qayyim -
-                </p>
+              <blockquote class="blockquote text-center">
+                <i>
+                <p class="mb-0">"Contohlah lebah, jika makan ia hanya memilih yang halal dan tayib, demikian pula jika ia memberi makan keluarganya. Dan bila ia
+                  hinggap diatas sesuatu, tak pernah ia mematahkan atau merusaknya."</p>
+                </i>
+                <footer class="blockquote-footer" style="color: #fff;">Ibn Al Qayyim</footer>
+              </blockquote>
+                
             </div>
         </div>
     </div>
@@ -245,7 +262,8 @@
 <!-- Footer-->
 <footer class="bg-light py-5">
     <div class="container"><div class="small text-center text-muted">Informasi : +62813 6400 7996 (WA Only) | Email : rtf.kepri2020@gmail.com 
-      | Copyright © 2020 - BANK INDONESIA</div></div>
+      | Copyright © 2020 - BANK INDONESIA</div>
+    </div>
 </footer>
 
 
