--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
 .btn.btn-square {
   border-radius: 0;
 }
+
+.fbg { 
+    background-image:url(assets/img/MESJID.png);
+    
+	background-position: right; 
+	background-repeat: no-repeat; 
+  background-size: cover; 
+  padding-bottom: 200px;
+}
 </style>
 
 
@@ -198,10 +207,10 @@
   </main><!-- End #main -->
 
    <!-- Contact-->
-   <section class="page-section" id="contact">
-    <div class="container">
+   <section class="page-section fbg" id="contact">
+    <div class="container ">
         <div class="row justify-content-center">
-            <div class="col-lg-8 text-center">
+            <div class="col-lg-5 text-center">
                 <h2 class="mt-0">KEPRI SYAHFEST 2020</h2>
                 <hr class="divider my-4" />
                 <p class="text-muted mb-5">"Contohlah lebah, jika makan ia hanya memilih yang halal dan tayib, demikian pula jika ia memberi makan keluarganya. Dan bila ia
@@ -215,13 +224,13 @@
 
 
 <!-- Footer-->
+
 <footer class="bg-light py-5">
     <div class="container"><div class="small text-center text-muted">Informasi : +62813 6400 7996 (WA Only) | Email : rtf.kepri2020@gmail.com 
-      | Copyright © 2020 - BANK INDONESIA</div></div>
+      | Copyright © 2020 - BANK INDONESIA</div>
+    </div>
 </footer>
 
-
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
