--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="w-100 text-white">
         <img src="assets//img/LOGO SYAHFEST 2020.png" class="img-fluid" style="width: 50%; height: 50%;" alt="">
         <h1 class="display-3"><b>Kepri Syahfest 2020</b></h1>
-        <p class="lead mb-0">Virtual Bazar</p>
+        <h3>Virtual Bazar</h3>
       </div>
     </div>
   </div>
@@ -253,7 +253,7 @@
 
    <!-- Contact-->
 
-   <section class="page-section pt-4 fbg" style="color: #fff; background-color: #67807c;" id="contact">
+   <section class="page-section fbg" style="padding-top: 10%; padding-bottom: 10%; color: #fff; background-color: #67807c;" id="contact">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
