--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 
 <header class="masthead">
   <div class="overlay"></div>
+  <img src="assets/img/BUNGA SYAHFEST.png" style="z-index: 2; position: absolute;" width="200"  alt="">
   <img src="assets/img/motif.png" class="banner" style="z-index: 1; background-repeat: repeat-x;" alt="Responsive image">
   <img src="assets/img/background.jpg" class="img-fluid banner" alt="Responsive image">
   <!-- <video playsinline="playsinline" autoplay poster="assets/img/syahfest.jpg" muted="muted" loop="loop" >
