--- a/index.html
+++ b/index.html
@@ -90,12 +90,7 @@
   }
   
   @media (pointer: coarse) and (hover: none) {
-    header {
-      background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
-    }
-    header video {
-      display: none;
-    }
+    
   }
   #section-video video {
      display: block; 
@@ -206,7 +201,7 @@
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/webinar.jpeg">
+                <img class="img-fluid" src="assets/img/webinar.jpg">
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>Nama Acara</b></h5>
@@ -225,7 +220,7 @@
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/webinar.jpeg">
+                <img class="img-fluid" src="assets/img/webinar.jpg">
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>Nama Acara</b></h5>
@@ -244,7 +239,7 @@
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/webinar.jpeg">
+                <img class="img-fluid" src="assets/img/webinar.jpg">
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>Nama Acara</b></h5>
