--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               <a href="#" data-filter=".3d">Perlombaan</a>
               <a href="#" data-filter=".branding">Virtual Bazar</a>
               <a href="#" data-filter=".branding">Webinar</a>
-              <a href="#" data-filter=".branding">Tabligh Akbar</a>
+              <a href="#" data-filter=".branding">Tausiah</a>
               <a href="#" data-filter=".branding">Penutupan</a>
             </div>
           </div>
