--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="card-body">
         <img src="assets/img/360-degree.png" width="100" height="100" alt="">
         <h5 class="card-title">Virtual Bazar</h5>
-        <p class="card-text">jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</p>
+        <p class="card-text">Jelajahi bazar dengan view 360 derajat menggunakan gawai anda.</p>
         <a href="virtual/index.html" class="btn btn-dark btn-lg btn-square">Buka Virtual Bazar</a>
       </div>
       <div class="card-footer text-muted">
