--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2><b>List Acara</b></h2>
-            <p class="mb-0">Syahfest &amp; 2020</p>
+            <p class="mb-0">Kepri Syahfest 2020</p>
           </div>
           <div class="col-md-12  text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
