--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <img src="assets/img/360-degree.png" width="100" height="100" alt="">
         <h4 class="card-title text-white"><b>Virtual Bazar</b></h4>
         <p class="card-text text-white"><i>Jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</i></p>
-        <a href="virtual/index.html" class="btn btn-light btn-lg"><b>Buka Virtual Bazar</b></a>
+        <a href="virtual/" class="btn btn-light btn-lg"><b>Buka Virtual Bazar</b></a>
 
       </div>
       
