--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ www.4happy-studio.com -->
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <img src="assets//img/LOGO SYAHFEST 2020.png" class="img-fluid" width="500"  alt="">
+        <img src="assets//img/LOGO SYAHFEST 2020 VIRTUAL.png" class="img-fluid" width="500"  alt="">
        
       </div>
     </div>
