--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@ www.4happy-studio.com -->
       
       
       <div class="card-body bg-dark">
-        <img src="assets/img/360-degree.png" width="100" height="100" alt="">
-        <h4 class="card-title text-white"><b>Virtual Bazar</b></h4>
+        <img src="assets/img/VIRTUAL EXPO LOGO.png" width="200" height="100" alt="" style="margin-bottom: 1%;">
         <p class="card-text text-white"><i>Jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</i></p>
         <a href="virtual/" class="btn btn-light btn-lg"><b>Buka Virtual Bazar</b></a>
 
