--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ www.4happy-studio.com -->
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/webinar.jpg">
+                <img class="img-fluid" src="assets/img/pembukaan.png">
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>Nama Acara</b></h5>
