--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="assets/img/pembukaan.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Nama Acara</b></h5>
-                <p class="card-text">Penjelasan Singkat Acara</p>
+                <h5 class="card-title"><b>Pembukaan, Webinar, Tausiah</b></h5>
+                <p class="card-text">Prosesi pembukaan kepri syahfest 2020, Launching KPwBI Kepri Virtual Expo 2020</p>
               </div>
               <div class="card-footer">
                 <a href="#" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
