--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@ www.4happy-studio.com -->
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/webinar.jpg">
+                <img class="img-fluid" src="assets/img/pembukaan.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Nama Acara</b></h5>
-                <p class="card-text">Penjelasan Singkat Acara</p>
+                <h5 class="card-title"><b>Pembukaan, Webinar, Tausiah</b></h5>
+                <p class="card-text">Webinar menciptakan hub ekonomi syariah di kepri</p>
               </div>
               <div class="card-footer">
                 <a href="#" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
@@ -246,11 +246,11 @@ www.4happy-studio.com -->
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/webinar.jpg">
+                <img class="img-fluid" src="assets/img/pembukaan.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Nama Acara</b></h5>
-                <p class="card-text">Penjelasan Singkat Acara</p>
+                <h5 class="card-title"><b>Tausiah</b></h5>
+                <p class="card-text">Berasma Ustaz Yusuf Mansur</p>
               </div>
               <div class="card-footer">
                 <a href="#" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
