--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="assets/img/pembukaan.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Pembukaan, Webinar, Tausiah</b></h5>
+                <h5 class="card-title"><b>Pembukaan Kepri Syahfest 2020</b></h5>
                 <p class="card-text">Prosesi pembukaan kepri syahfest 2020, Launching KPwBI Kepri Virtual Expo 2020</p>
               </div>
               <div class="card-footer">
@@ -222,7 +222,7 @@ www.4happy-studio.com -->
 
           <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="#" class="item-wrap fancybox">
+              <a href="tiny.cc/RegBukaSyahfest2020" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -230,11 +230,11 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="assets/img/pembukaan.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Pembukaan, Webinar, Tausiah</b></h5>
+                <h5 class="card-title"><b>WEBINAR " Menciptakan Hub Ekonomi Syariah di Kepri</b></h5>
                 <p class="card-text">Webinar menciptakan hub ekonomi syariah di kepri</p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
+                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
               </div>
             </div>
           </div>
@@ -249,11 +249,11 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="assets/img/pembukaan.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Tausiah</b></h5>
-                <p class="card-text">Berasma Ustaz Yusuf Mansur</p>
+                <h5 class="card-title"><b>Tausiah Bersama Ustaz Yusuf Mansur</b></h5>
+                <p class="card-text">15-45 - 16.45 WIB</p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
+                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
               </div>
             </div>
           </div>
