--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ www.4happy-studio.com -->
                 <p class="card-text">Prosesi pembukaan kepri syahfest 2020, Launching KPwBI Kepri Virtual Expo 2020</p>
               </div>
               <div class="card-footer">
-                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
+                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
               </div>
             </div>
           </div>
@@ -234,7 +234,7 @@ www.4happy-studio.com -->
                 <p class="card-text">Webinar menciptakan hub ekonomi syariah di kepri</p>
               </div>
               <div class="card-footer">
-                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
+                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
               </div>
             </div>
           </div>
@@ -253,7 +253,7 @@ www.4happy-studio.com -->
                 <p class="card-text">15-45 - 16.45 WIB</p>
               </div>
               <div class="card-footer">
-                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Coming Soon</a>
+                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
               </div>
             </div>
           </div>
