--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ www.4happy-studio.com -->
           
           <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="tiny.cc/RegBukaSyahfest2020" class="item-wrap fancybox">
+              <a href="https://us02web.zoom.us/webinar/register/WN_l7ToLbapTbSqOUH_WjroUQ" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
