--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@ www.4happy-studio.com -->
                 <p class="card-text">Prosesi pembukaan kepri syahfest 2020, Launching KPwBI Kepri Virtual Expo 2020</p>
               </div>
               <div class="card-footer">
-                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
+                <a href="https://us02web.zoom.us/webinar/register/WN_l7ToLbapTbSqOUH_WjroUQ" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
               </div>
             </div>
           </div>
 
           <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="tiny.cc/RegBukaSyahfest2020" class="item-wrap fancybox">
+              <a href="https://us02web.zoom.us/webinar/register/WN_l7ToLbapTbSqOUH_WjroUQ" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -234,14 +234,14 @@ www.4happy-studio.com -->
                 <p class="card-text">Webinar menciptakan hub ekonomi syariah di kepri</p>
               </div>
               <div class="card-footer">
-                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
+                <a href="https://us02web.zoom.us/webinar/register/WN_l7ToLbapTbSqOUH_WjroUQ" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
               </div>
             </div>
           </div>
 
           <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="tiny.cc/RegBukaSyahfest2020" class="item-wrap fancybox">
+              <a href="https://us02web.zoom.us/webinar/register/WN_l7ToLbapTbSqOUH_WjroUQ" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -253,7 +253,7 @@ www.4happy-studio.com -->
                 <p class="card-text">15-45 - 16.45 WIB</p>
               </div>
               <div class="card-footer">
-                <a href="tiny.cc/RegBukaSyahfest2020" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
+                <a href="https://us02web.zoom.us/webinar/register/WN_l7ToLbapTbSqOUH_WjroUQ" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
               </div>
             </div>
           </div>
