--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@ www.4happy-studio.com -->
           </div>
           <div class="col-md-12  text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
-              <a href="#" data-filter=".programming" class="active"><b>Semua</b></a>
-              <a href="#" data-filter=".programming">Pembukaan</a>
-              <a href="#" data-filter=".3d">Perlombaan</a>
+              <a href="#" data-filter=".3d" class="active"><b>Semua</b></a>
+              <a href="#" data-filter=".3d">Pembukaan</a>
+              <a href="#" data-filter=".branding">Perlombaan</a>
               <a href="#" data-filter=".branding">Virtual Bazar</a>
-              <a href="#" data-filter=".branding">Webinar</a>
-              <a href="#" data-filter=".branding">Tausiyah</a>
-              <a href="#" data-filter=".branding">Penutupan</a>
+              <a href="#" data-filter=".3d">Webinar</a>
+              <a href="#" data-filter=".3d">Tausiyah</a>
+              <a href="#" data-filter=".3d">Penutupan</a>
             </div>
           </div>
         </div>
