--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ www.4happy-studio.com -->
               <a href="#" data-filter=".branding">Virtual Bazar</a>
               <a href="#" data-filter=".3d">Webinar</a>
               <a href="#" data-filter=".3d">Tausiyah</a>
-              <a href="#" data-filter=".3d">Penutupan</a>
+              <a href="#" data-filter=".branding">Penutupan</a>
             </div>
           </div>
         </div>
