--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ www.4happy-studio.com -->
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/pembukaan.png">
+                <img class="img-fluid" src="assets/img/launching.jpeg">
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>Pembukaan Kepri Syahfest 2020</b></h5>
@@ -227,7 +227,7 @@ www.4happy-studio.com -->
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/pembukaan.png">
+                <img class="img-fluid" src="assets/img/webinar1.jpeg">
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>WEBINAR " Menciptakan Hub Ekonomi Syariah di Kepri</b></h5>
@@ -246,7 +246,7 @@ www.4happy-studio.com -->
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
                 </div>
-                <img class="img-fluid" src="assets/img/pembukaan.png">
+                <img class="img-fluid" src="assets/img/tausiah.jpeg">
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>Tausiah Bersama Ustaz Yusuf Mansur</b></h5>
