--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ www.4happy-studio.com -->
                 <p class="card-text">Prosesi pembukaan kepri syahfest 2020, Launching KPwBI Kepri Virtual Expo 2020</p>
               </div>
               <div class="card-footer">
-                <a href="https://www.youtube.com/channel/UCItAHXyhVDKlUuOELtxhgeQ" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Klik Untuk Regis</a>
+                <a href="https://www.youtube.com/channel/UCItAHXyhVDKlUuOELtxhgeQ" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
               </div>
             </div>
           </div>
