--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ www.4happy-studio.com -->
           
           <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="https://www.youtube.com/channel/UCItAHXyhVDKlUuOELtxhgeQ" class="item-wrap fancybox">
+              <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -215,7 +215,7 @@ www.4happy-studio.com -->
                 <p class="card-text">Prosesi pembukaan kepri syahfest 2020, Launching KPwBI Kepri Virtual Expo 2020</p>
               </div>
               <div class="card-footer">
-                <a href="https://www.youtube.com/channel/UCItAHXyhVDKlUuOELtxhgeQ" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
+                <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
               </div>
             </div>
           </div>
