--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ www.4happy-studio.com -->
       <div class="card-body bg-dark">
         <img src="assets/img/VIRTUAL EXPO LOGO.png" width="200" height="100" alt="" style="margin-bottom: 1%;">
         <p class="card-text text-white"><i>Jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</i></p>
-        <a href="/virtual/index.htm" class="btn btn-light btn-lg"><b>Buka Virtual Bazar</b></a>
+        <a href="virtual/" class="btn btn-light btn-lg"><b>Buka Virtual Bazar</b></a>
 
       </div>
       
