--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@ www.4happy-studio.com -->
         <img src="assets/img/VIRTUAL EXPO LOGO.png" width="200" height="100" alt="" style="margin-bottom: 1%;">
         <p class="card-text text-white"><i>Jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</i></p>
         <a href="virtual/" class="btn btn-light btn-lg"><b>Buka Virtual Bazar</b></a>
+        <img src="assets/img/Logo KKI-Color.png" width="200" height="100" alt="" style="margin-bottom: 1%;">
+        <a href="virtual/" class="btn btn-light btn-lg"><b>Buka Virtual Bazar KKI</b></a>
 
       </div>
       
