--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ www.4happy-studio.com -->
         <p class="card-text text-white"><i>Jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</i></p>
         <a href="virtual/" class="btn btn-light btn-lg"><b>Buka Virtual Bazar</b></a>
         <img src="assets/img/Logo KKI-Color.png" width="200" height="100" alt="" style="margin-bottom: 1%;">
+        <p class="card-text text-white"><i>Jelajahi Bazar dengan view 360 derajat menggunakan gawai anda.</i></p>
         <a href="virtual/" class="btn btn-light btn-lg"><b>Buka Virtual Bazar KKI</b></a>
-
       </div>
       
     </div>
