--- a/produkbaru.html
+++ b/produkbaru.html
@@ -135,6 +135,10 @@ www.4happy-studio.com -->
 
 
   <main id="main">
+
+    <video class="video-fluid z-depth-1" autoplay loop controls muted>
+      <source src="https://mdbootstrap.com/img/video/Sail-Away.mp4" type="video/mp4" />
+    </video>
     
     <div class="card" style="width: 18rem;">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
