--- a/produkbaru.html
+++ b/produkbaru.html
@@ -137,7 +137,7 @@ www.4happy-studio.com -->
   <main id="main">
 
     <video class="video-fluid z-depth-1" autoplay loop controls muted>
-      <source src="https://mdbootstrap.com/img/video/Sail-Away.mp4" type="video/mp4" />
+      <source src="https://www.youtube.com/embed/RpJjH0MWlbE" type="video/mp4" />
     </video>
     
     <div class="card" style="width: 18rem;">
