--- a/produkbaru.html
+++ b/produkbaru.html
@@ -137,7 +137,7 @@ www.4happy-studio.com -->
   <main id="main">
 
     <video class="video-fluid z-depth-1" autoplay loop controls muted>
-      <source src="https://www.youtube.com/embed/RpJjH0MWlbE" type="video/mp4" />
+      <iframe src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" width="640" height="480"></iframe>
     </video>
     
     <div class="card" style="width: 18rem;">
