--- a/produkbaru.html
+++ b/produkbaru.html
@@ -136,8 +136,8 @@ www.4happy-studio.com -->
 
   <main id="main">
 
-    <video class="video-fluid z-depth-1" autoplay loop controls muted>
-      <iframe src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" width="640" height="480"></iframe>
+    <video playsinline="playsinline" autoplay poster="assets/img/syahfest.jpg" muted="muted" loop="loop" >
+      <source src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" type="video/mp4">    
     </video>
     
     <div class="card" style="width: 18rem;">
