--- a/produkbaru.html
+++ b/produkbaru.html
@@ -136,9 +136,9 @@ www.4happy-studio.com -->
 
   <main id="main">
 
-    <video playsinline="playsinline" autoplay poster="assets/img/syahfest.jpg" muted="muted" loop="loop" >
-      <source src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" type="video/mp4">    
-    </video>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" allowfullscreen></iframe>
+    </div>
     
     <div class="card" style="width: 18rem;">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
