--- a/produkbaru.html
+++ b/produkbaru.html
@@ -136,40 +136,42 @@ www.4happy-studio.com -->
 
   <main id="main">
 
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" allowfullscreen></iframe>
-    </div>
-    
-    <div class="card" style="width: 18rem;">
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Banana.png" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Chocolate.png" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Original Black Sesame.png" alt="Third slide">
-          </div>
+    <div class="card text-center">
+      <div class="card-header">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" allowfullscreen></iframe>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Banana.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Chocolate.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Original Black Sesame.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
     </div>
-
-
 
  
 
