--- a/produkbaru.html
+++ b/produkbaru.html
@@ -135,7 +135,7 @@ www.4happy-studio.com -->
 
 
   <main id="main">
-    <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+    <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4 text-center">
     <div class="card text-center">
       <div class="card-header">
         <div class="embed-responsive embed-responsive-16by9">
