--- a/produkbaru.html
+++ b/produkbaru.html
@@ -147,12 +147,24 @@ www.4happy-studio.com -->
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Banana.png" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>...</h5>
+                <p>...</p>
+              </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Chocolate.png" alt="Second slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>...</h5>
+                <p>...</p>
+              </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Original Black Sesame.png" alt="Third slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>...</h5>
+                <p>...</p>
+              </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -164,9 +176,9 @@ www.4happy-studio.com -->
             <span class="sr-only">Next</span>
           </a>
         </div>
-        <h5 class="card-title">Special title treatment</h5>
+        <h5 class="card-title">Lina Sukijo</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-warning">Beli Disini</a>
       </div>
       <div class="card-footer text-muted">
         2 days ago
