--- a/produkbaru.html
+++ b/produkbaru.html
@@ -146,24 +146,52 @@ www.4happy-studio.com -->
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Banana.png" alt="First slide">
+              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6532.png" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
-                <h5>...</h5>
-                <p>...</p>
+                <h5></h5>
+                <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Chocolate.png" alt="Second slide">
+              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6538.png" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
-                <h5>...</h5>
-                <p>...</p>
+                <h5></h5>
+                <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/KampungResepi/Semprong Original Black Sesame.png" alt="Third slide">
+              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6542.png" alt="Third slide">
               <div class="carousel-caption d-none d-md-block">
-                <h5>...</h5>
-                <p>...</p>
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6549.png" alt="Fourth slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6553.png" alt="Five slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6561.png" alt="Six slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6563.png" alt="Seven slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5></h5>
+                <p></p>
               </div>
             </div>
           </div>
@@ -177,7 +205,7 @@ www.4happy-studio.com -->
           </a>
         </div>
         <h5 class="card-title">Lina Sukijo</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text">Madinah Hijab Syar’i Premium</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
       </div>
       <div class="card-footer text-muted">
