--- a/produkbaru.html
+++ b/produkbaru.html
@@ -209,7 +209,7 @@ www.4happy-studio.com -->
         <a href="#" class="btn btn-warning">Beli Disini</a>
       </div>
       <div class="card-footer text-muted">
-        2 days ago
+        <a href="#" class="btn btn-warning">Whatsapp</a>
       </div>
     </div>
   </div>
