--- a/produkbaru.html
+++ b/produkbaru.html
@@ -207,6 +207,7 @@ www.4happy-studio.com -->
         <h5 class="card-title">Lina Sukijo</h5>
         <p class="card-text">Madinah Hijab Syar’i Premium</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
+        <a href="#" class="btn btn-warning">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         <a href="#" class="btn btn-warning">Whatsapp</a>
