--- a/produkbaru.html
+++ b/produkbaru.html
@@ -142,7 +142,9 @@ www.4happy-studio.com -->
           <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" allowfullscreen></iframe>
         </div>
       </div>
+      
       <div class="card-body">
+        <h5 class="card-title">Lina Sukijo</h5>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -204,13 +206,13 @@ www.4happy-studio.com -->
             <span class="sr-only">Next</span>
           </a>
         </div>
-        <h5 class="card-title">Lina Sukijo</h5>
+        
         <p class="card-text">Madinah Hijab Syar’i Premium</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
         <a href="#" class="btn btn-warning">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
-        <a href="#" class="btn btn-warning">Whatsapp</a>
+        Deskripsi Produk
       </div>
     </div>
   </div>
