--- a/produkbaru.html
+++ b/produkbaru.html
@@ -207,7 +207,7 @@ www.4happy-studio.com -->
           </a>
         </div>
         
-        <p class="card-text">Madinah Hijab Syar’i Premium</p>
+        <p style="padding-top: 20px;" class="card-text">Madinah Hijab Syar’i Premium</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
         <a href="#" class="btn btn-warning">Whatsapp</a>
       </div>
