--- a/tenant/produkbaru.html
+++ b/tenant/produkbaru.html
@@ -209,7 +209,7 @@ www.4happy-studio.com -->
         
         <p style="padding-top: 20px;" class="card-text">Madinah Hijab Syar’i Premium</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
-        <a href="#" class="btn btn-warning">Whatsapp</a>
+        <a href="#" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
