--- a/tenant/produkbaru.html
+++ b/tenant/produkbaru.html
@@ -28,7 +28,7 @@ www.4happy-studio.com -->
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/assets/css/style.css" rel="stylesheet">
 
   <style>
   header {
@@ -122,7 +122,7 @@ www.4happy-studio.com -->
 <nav class="navbar navbar-light" style="position: relative; background-color: #445552; z-index: 2; height: 20%;">
  
   <a class="navbar-brand mx-auto" href="#">
-    <img src="assets/img/bi logo.png" width="200" class="mx-2" alt="">
+    <img src="/assets/img/bi logo.png" width="200" class="mx-2" alt="">
     <img src="assets/img/LOGO RTF.png" width="100"  class="mx-2" alt="">
   </a>
   
