--- a/tenant/produkbaru.html
+++ b/tenant/produkbaru.html
@@ -123,7 +123,7 @@ www.4happy-studio.com -->
  
   <a class="navbar-brand mx-auto" href="#">
     <img src="/assets/img/bi logo.png" width="200" class="mx-2" alt="">
-    <img src="assets/img/LOGO RTF.png" width="100"  class="mx-2" alt="">
+    <img src="/assets/img/LOGO RTF.png" width="100"  class="mx-2" alt="">
   </a>
   
 </nav>
