--- a/tenant/maeteh.html
+++ b/tenant/maeteh.html
@@ -144,7 +144,7 @@ www.4happy-studio.com -->
       </div>
       
       <div class="card-body">
-        <h5 class="card-title">Lina Sukijo</h5>
+        <h5 class="card-title">Ma Eteh</h5>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -242,7 +242,7 @@ www.4happy-studio.com -->
           </a>
         </div>
         
-        <p style="padding-top: 20px;" class="card-text">Madinah Hijab Syar’i Premium</p>
+        <p style="padding-top: 20px;" class="card-text">Kain Tenun Cual Siantan - Anambas</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
         <a href="#" class="btn btn-success">Whatsapp</a>
       </div>
