--- a/tenant/pranaliving.html
+++ b/tenant/pranaliving.html
@@ -139,12 +139,12 @@ www.4happy-studio.com -->
     <div class="card text-center">
       <div class="card-header">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1cy5WkmuZcUFwG7vM_nuovHHtt3Jz9kuz/preview" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/10k_RWDOltUZJrtXn9_l0qJBrUGXatE_i/preview" allowfullscreen></iframe>
         </div>
       </div>
       
       <div class="card-body">
-        <h5 class="card-title">Lina Sukijo</h5>
+        <h5 class="card-title">Prana Living</h5>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
