--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -151,7 +151,7 @@ www.4happy-studio.com -->
               <img class="d-block w-100" src="/assets/img//Totto Craft/Kaligrafi Syahadad.png" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Kaligrafi Syahadad</h5>
-                <p></p>
+                <p>Kaligrafi Syahadad</p>
               </div>
             </div>
             <div class="carousel-item">
