--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -149,7 +149,7 @@ www.4happy-studio.com -->
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="/assets/img//Totto Craft/Kaligrafi Syahadad.png" alt="First slide">
-              <div class="carousel-caption d-none d-md-block mx-auto">
+              <div class="carousel-caption" style="text-size-adjust: 8px;">
                 <h5>Kaligrafi Syahadad</h5>
                 <p>Kaligrafi Syahadad</p>
               </div>
