--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -111,6 +111,18 @@ www.4happy-studio.com -->
   background-size: cover; 
   padding-bottom: 200px;
 }
+.carousel-caption {
+width:200px;
+z-index:10;
+color:#fff;
+text-align:center;
+top:50%;
+left:65%;
+bottom:auto;
+-webkit-transform:translate(0, -50%);
+-ms-transform:translate(0, -50%);
+transform:translate(0, -50%);
+}
 </style>
 
 
