--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -116,7 +116,8 @@ width:200px;
 z-index:10;
 color:#fff;
 text-align:center;
-top:80%;
+top:70%;
+left:5%;
 bottom:auto;
 -webkit-transform:translate(0, -50%);
 -ms-transform:translate(0, -50%);
