--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -168,84 +168,84 @@ transform:translate(0, -50%);
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Bismillah.png" alt="Second slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Kaligrafi Bismillah</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Ikan Marlin.png" alt="Third slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Batik Tulis Motif Ikan Marlin</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Ubur-Ubur.png" alt="Fourth slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Batik Tulis Motif Ubur-Ubur</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Gong-gong dan Rumput Laut.png" alt="Five slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Batik Tulis Motif Gong-gong dan Rumput Laut</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Gong-gong dan Bunga Kundur.png" alt="Six slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Batik Tulis Motif Gong-gong dan Bunga Kundur</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Batik Tulis Motif Abstract Kontemporer.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Batik Tulis Motif Abstract Kontemporer</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik 2 Arwana.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Lukisan Batik 2 Arwana</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik Gong-gong.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Lukisan Batik Gong-gong</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Lukisan Batik Bunga Teratai.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Lukisan Batik Bunga Teratai</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Batik Arwana.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Kaligrafi Batik Arwana</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Lafas Muhammad.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Kaligrafi Lafas Muhammad</h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/assets/img/Totto Craft/Kaligrafi Lafas Allah.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Kaligrafi Lafas Allah</h5>
                 <p></p>
               </div>
