--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -112,7 +112,8 @@ www.4happy-studio.com -->
   padding-bottom: 200px;
 }
 .carousel-caption {
-width:150px;
+width:200px;
+font-size: 12px;
 z-index:10;
 color:#fff;
 text-align:center;
