--- a/tenant/littlenasywa.html
+++ b/tenant/littlenasywa.html
@@ -161,28 +161,28 @@ transform:translate(0, -50%);
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG-20170722-WA0005_compressed.png" alt="First slide">
+              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG-20170722-WA0005.jpg" alt="First slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG-20170722-WA0008_compressed.png" alt="Second slide">
+              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG-20170722-WA0008.jpg" alt="Second slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG_20190131_060531_408_compressed.png" alt="Third slide">
+              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG_20190131_060531_408.jpg" alt="Third slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG_20190131_060531_410_compressed.png" alt="Fourth slide">
+              <img class="d-block w-100" src="/assets/img/Little Nasywa/IMG_20190131_060531_410.jpg" alt="Fourth slide">
               <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
