--- a/tenant/littlenasywa.html
+++ b/tenant/littlenasywa.html
@@ -208,7 +208,7 @@ transform:translate(0, -50%);
         
         <p style="padding-top: 20px;" class="card-text">Little Nasywa</p>
         <a href="https://shopee.co.id/nasywa_hijab?v=244&smtt=0.0.3" class="btn btn-warning">Beli Disini</a>
-        <a href="#" class="btn btn-success">Whatsapp</a>
+        <a href="https://wa.me/6281277547750" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
