--- a/tenant/rumahtenun.html
+++ b/tenant/rumahtenun.html
@@ -250,7 +250,7 @@ transform:translate(0, -50%);
         
         <p style="padding-top: 20px;" class="card-text">Rumah Tenun & Batik Arios</p>
         <a href="http://shopee.co.id/arios10" class="btn btn-warning" target="_blank">Beli Disini</a>
-        <a href="#" class="btn btn-success">Whatsapp</a>
+        <a href="https://wa.me/6281276917519" class="btn btn-success" target="_blank">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
