--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="assets/img/DESAIN FEED LOMBA HIJAB SYAHFEST 2020_compressed.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Desain</b></h5>
-                <p class="card-text">DESAIN FEED LOMBA HIJAB SYAHFEST 2020</p>
+                <h5 class="card-title"><b>Lomba</b></h5>
+                <p class="card-text">LOMBA HIJAB SYAHFEST 2020</p>
               </div>
               <div class="card-footer">
                 <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
@@ -289,8 +289,8 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="assets/img/DESAIN FEED LOMBA NASYID SYAHFEST 2020_compressed.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Desain</b></h5>
-                <p class="card-text">DESAIN FEED LOMBA NASYID SYAHFEST 2020</p>
+                <h5 class="card-title"><b>Lomba</b></h5>
+                <p class="card-text">LOMBA NASYID SYAHFEST 2020</p>
               </div>
               <div class="card-footer">
                 <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
@@ -308,8 +308,8 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="/assets/img/DESAIN FEED LOMBA TARI SYAHFEST 2020_compressed.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Desain</b></h5>
-                <p class="card-text">DESAIN FEED LOMBA TARI SYAHFEST 2020</p>
+                <h5 class="card-title"><b>Lomba</b></h5>
+                <p class="card-text">LOMBA TARI SYAHFEST 2020</p>
               </div>
               <div class="card-footer">
                 <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
@@ -327,8 +327,8 @@ www.4happy-studio.com -->
                 <img class="img-fluid" src="assets/img/DESAIN FEED LOMBA WIRAUSAHA MUDA SYAHFEST 2020_compressed.png">
               </a>
               <div class="card-body text-center">
-                <h5 class="card-title"><b>Desain</b></h5>
-                <p class="card-text">DESAIN FEED LOMBA WIRAUSAHA MUDA SYAHFEST 2020</p>
+                <h5 class="card-title"><b>Lomba</b></h5>
+                <p class="card-text">LOMBA WIRAUSAHA MUDA SYAHFEST 2020</p>
               </div>
               <div class="card-footer">
                 <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
